--- a/try.css
+++ b/try.css
@@ -1,3 +1,17 @@
 body {
-  
+
+  background-image: url("beach-4530127.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  opacity: 0.6;
+
+}
+li {
+  list-style: none;
+  float: left;
+  margin-left: 5px;
+}
+p {
+  border: 50px;
+  border-color: yellow;
 }
