--- a/try.css
+++ b/try.css
@@ -27,4 +27,13 @@ div {
   width: 2000px;
   background-color: #61892F;
   height: 80px;
+  z-index: 3;
+}
+/*body text*/
+.Welcome {
+  font-family: arial;
+  font-size: 100px;
+  position: absolute;
+  top: 100px;
+  left: 40px;
 }
