--- a/try.css
+++ b/try.css
@@ -11,14 +11,18 @@ li {
   float: left;
   list-style: none;
   border: 5px solid transparent;
-  color: white;
   padding: 3px 30px 3px 30px;
   font-family: arial;
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
+  color: white;
 }
 li:hover{
   background-color: #86C232;
   color: #6B6E70;
-  transition: 0.5s;
+  transition: 0.5s ease;
 }
 div {
   position: fixed;
@@ -29,11 +33,49 @@ div {
   height: 80px;
   z-index: 3;
 }
+#first:focus{
+  background-color: #86C232;
+  color: #6B6E70;
+}
 /*body text*/
+.Trans {
+  transition: 3s;
+}
+p {
+  z-index: 1;
+
+}
+
+.name {
+  font-family: arial;
+  font-size: 20px;
+  position: absolute;
+  top: 340px;
+  left: 20px;
+  color: #61892F;
+  font-weight: bold;
+}
+.Created{
+  font-family: arial;
+  font-size: 20px;
+  position: absolute;
+  top: 320px;
+  left: 20px;
+  color: #61892F;
+  font-weight: bold;
+}
 .Welcome {
   font-family: arial;
-  font-size: 100px;
+  font-size: 90px;
   position: absolute;
   top: 100px;
   left: 40px;
+}
+.to {
+  font-family: arial;
+  font-size: 50px;
+  position: absolute;
+  top: 240px;
+  left: 70px;
+  color: black;
 }
