--- a/try.css
+++ b/try.css
@@ -43,9 +43,7 @@ div {
 }
 p {
   z-index: 1;
-
 }
-
 .name {
   font-family: arial;
   font-size: 20px;
@@ -78,4 +76,32 @@ p {
   top: 220px;
   left: 20px;
   color: black;
+}
+/*picDivleft*/
+#pictureleft {
+  position: absolute;
+  top: 200px;
+  left:   60%;
+  width: 500px;
+  height: 300px;
+  z-index: 2;
+  background-color: red;
+}
+#picturecontainer {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  width: 50px;
+  height: 300px;
+  background-color: yellow;
+  background-image: url(beach-4530127.jpg);
+  background-position: top left;
+  background-size: cover;
+  z-index: 3;
+  opacity: 0.1;
+}
+#picturecontainer:hover{
+  width: 500px;
+  transition: 2s;
+  opacity: 1;
 }
