--- a/try.css
+++ b/try.css
@@ -79,12 +79,11 @@ p {
 }
 /*picDivleft*/
 #pictureleft {
-  position: absolute;
-  top: 200px;
-  left:   60%;
+  position: relative;
+  float: right;
   width: 500px;
   height: 300px;
-  z-index: 2;
+
   background-color: red;
 }
 #picturecontainer {
