--- a/try.css
+++ b/try.css
@@ -91,10 +91,10 @@ p {
   right: 250px;
   color: black;
 }
-/*picDivleft*/
+/*picDivright*/
 #pictureright {
   background-image: url(Java_logo_icon.png);
-  background-size: 500px 200px;
+  background-size: 300px 400px;
   background-repeat: no-repeat;
   position: relative;
   top: 550px;
