--- a/try.css
+++ b/try.css
@@ -93,9 +93,9 @@ p {
 }
 /*picDivright*/
 #pictureright {
-  background-image: url(Java_logo_icon.png);
-  background-size: 300px 400px;
-  background-repeat: no-repeat;
+  background-image: url(java.jpg);
+  background-position: top left;
+  background-size: cover;
   position: relative;
   top: 550px;
   float: left;
@@ -110,10 +110,10 @@ p {
   float: right;
   width: 400px;
   height: 300px;
-  background-color: yellow;
-  background-image: url(java.jpg);
-  background-position: top left;
-  background-size: cover;
+  background-image: url(Java_logo_icon.png);
+  background-size: 390px 420px;
+  background-repeat: no-repeat;
+  background-color: white;
   z-index: -1;
   opacity: 0;
 }
